--- a/README.adoc
+++ b/README.adoc
@@ -21,35 +21,17 @@
 
 image:{img-ci-status}[CI Status (GitLab CI), link={url-ci-pipelines}]
 
-This project is an archetype that demonstrates how to produce a UI bundle that can be used by {url-antora}[Antora] to generated a documentation site.
-You can see a preview of the default UI at {url-preview}.
+Repository that provides the Antora UI and theme for the oNote documentation site.
 
-While the default UI is ready to be used with Antora, the intent is that you'll fork it and customize it for your own needs.
-It's intentionally minimalistic so as to give you a good starting point without requiring too much effort to customize.
+This is a backup plan if there isn't time to implement reuse of Twig templates for the main oNote web site.
 
-== Code of Conduct
+Antora UI theme uses Handlebars templates.
 
-The Antora project and its project spaces are governed by our https://gitlab.com/antora/antora/-/blob/master/CODE-OF-CONDUCT.adoc[Code of Conduct].
-By participating, you're agreeing to honor this code.
-Let's work together to make this a welcoming, professional, inclusive, and safe environment for everyone.
+For more information, see https://docs.antora.org/antora-ui-default/.
 
-== Use the Default UI
+Also look to the Couchbase UI repo for inspiration: https://github.com/couchbase/docs-ui/
 
-If you want to simply use the default UI for your Antora-generated site, add the following UI configuration to your playbook:
-
-[source,yaml]
-----
-ui:
-  bundle:
-    url: https://gitlab.com/antora/antora-ui-default/-/jobs/artifacts/master/raw/build/ui-bundle.zip?job=bundle-stable
-    snapshot: true
-----
-
-NOTE: The `snapshot` flag tells Antora to fetch the UI when the `--fetch` command-line flag is present.
-This setting is required because updates to the UI bundle are pushed to the same URL.
-If the URL were to be unique, this setting would not be required.
-
-Read on to learn how to customize the default UI for your own documentation.
+Here is their released bundle area: https://github.com/couchbase/docs-ui/releases
 
 == Development Quickstart
 
